--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,13 @@ android {
     productFlavors {
     }
 }
+repositories{ jcenter()}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.0"
+    testCompile "org.mockito:mockito-core:1.+"
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
 }
